--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -50,6 +50,9 @@
       <li>Charizard
           <img src="https://unpkg.com/pokeapi-sprites@2.0.2/sprites/pokemon/other/dream-world/6.svg" alt="charizard">
       </li>
+      <li>Squirtle
+          <img src="https://unpkg.com/pokeapi-sprites@2.0.2/sprites/pokemon/other/dream-world/7.svg" alt="squirtle">
+      </li>
 
     </ol>
   </section>
